# pycharm-poetry-repro

./: README.md
myapp/: app.py  pyproject.toml
mylib/: mylib.py  pyproject.toml
