[tool.poetry]
name = "myapp"
version = "0.0.0"
description = ""
authors = ["Example <hello@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mylib = {path = "../mylib", develop = true}

[tool.poetry.dev-dependencies]
pytest = "~=7.1"

[build-system]
requires = ["poetry>=1.1.13"]
build-backend = "poetry.masonry.api"